--- a/Project Cinema/Base.lproj/Main.storyboard
+++ b/Project Cinema/Base.lproj/Main.storyboard
@@ -870,34 +870,48 @@
                                             <rect key="frame" x="0.0" y="37" width="600" height="175"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <view key="tableFooterView" contentMode="scaleToFill" id="Iuo-iS-11o">
-                                                <rect key="frame" x="0.0" y="72" width="600" height="0.0"/>
+                                                <rect key="frame" x="0.0" y="128" width="600" height="0.0"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             </view>
                                             <prototypes>
-                                                <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="mediaReviewCell" textLabel="ic2-jU-VDR" detailTextLabel="PLl-gm-isY" style="IBUITableViewCellStyleSubtitle" id="Vlk-si-ifO">
-                                                    <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                                <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="mediaReviewCell" rowHeight="100" id="Vlk-si-ifO" customClass="PCReviewsRowTableViewCell" customModule="Project_Cinema" customModuleProvider="target">
+                                                    <rect key="frame" x="0.0" y="28" width="600" height="100"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Vlk-si-ifO" id="eR3-gh-URc">
-                                                        <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="600" height="99"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                         <subviews>
-                                                            <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ic2-jU-VDR">
-                                                                <rect key="frame" x="15" y="5" width="32" height="20"/>
-                                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="150" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ity-9B-bPp">
+                                                                <rect key="frame" x="8" y="27" width="584" height="64"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
-                                                            <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="PLl-gm-isY">
-                                                                <rect key="frame" x="15" y="25" width="41" height="14"/>
-                                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="auO-qN-brY">
+                                                                <rect key="frame" x="8" y="3" width="584" height="21"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="height" constant="21" id="Zps-oj-1Af"/>
+                                                                </constraints>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                         </subviews>
+                                                        <constraints>
+                                                            <constraint firstItem="Ity-9B-bPp" firstAttribute="trailing" secondItem="eR3-gh-URc" secondAttribute="trailingMargin" id="6QH-Px-7h2"/>
+                                                            <constraint firstItem="Ity-9B-bPp" firstAttribute="leading" secondItem="eR3-gh-URc" secondAttribute="leadingMargin" id="6iX-J7-6P4"/>
+                                                            <constraint firstItem="auO-qN-brY" firstAttribute="leading" secondItem="eR3-gh-URc" secondAttribute="leadingMargin" id="NbA-MA-BFs"/>
+                                                            <constraint firstItem="auO-qN-brY" firstAttribute="top" secondItem="eR3-gh-URc" secondAttribute="top" constant="3" id="NhF-Io-5Oa"/>
+                                                            <constraint firstItem="auO-qN-brY" firstAttribute="trailing" secondItem="eR3-gh-URc" secondAttribute="trailingMargin" id="Pgd-iw-5KC"/>
+                                                            <constraint firstItem="Ity-9B-bPp" firstAttribute="bottom" secondItem="eR3-gh-URc" secondAttribute="bottomMargin" id="Tp1-g4-mQr"/>
+                                                            <constraint firstItem="Ity-9B-bPp" firstAttribute="top" secondItem="auO-qN-brY" secondAttribute="bottom" constant="3" id="gnz-NB-OZM"/>
+                                                        </constraints>
                                                     </tableViewCellContentView>
+                                                    <connections>
+                                                        <outlet property="authorLabel" destination="auO-qN-brY" id="fhn-iE-V20"/>
+                                                        <outlet property="contentLabel" destination="Ity-9B-bPp" id="KWt-8z-DOD"/>
+                                                    </connections>
                                                 </tableViewCell>
                                             </prototypes>
                                             <connections>
