--- a/Project Cinema/Base.lproj/Main.storyboard
+++ b/Project Cinema/Base.lproj/Main.storyboard
@@ -327,15 +327,15 @@
                                             </connections>
                                         </collectionView>
                                         <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="leftEdgeIndicator" translatesAutoresizingMaskIntoConstraints="NO" id="rLc-HX-vKY">
-                                            <rect key="frame" x="0.0" y="37" width="35" height="218"/>
+                                            <rect key="frame" x="0.0" y="37" width="20" height="218"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="35" id="8qD-Kr-ffh"/>
+                                                <constraint firstAttribute="width" constant="20" id="8qD-Kr-ffh"/>
                                             </constraints>
                                         </imageView>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rightEdgeIndicator" translatesAutoresizingMaskIntoConstraints="NO" id="JYt-OC-kmS">
-                                            <rect key="frame" x="565" y="37" width="35" height="218"/>
+                                            <rect key="frame" x="580" y="37" width="20" height="218"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="35" id="51a-ae-3rX"/>
+                                                <constraint firstAttribute="width" constant="20" id="51a-ae-3rX"/>
                                             </constraints>
                                         </imageView>
                                     </subviews>
@@ -1129,6 +1129,6 @@
         <image name="trailerIcon" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="raM-0z-gmg"/>
+        <segue reference="ARj-tT-Kvi"/>
     </inferredMetricsTieBreakers>
 </document>
