--- a/Project Cinema/Base.lproj/Main.storyboard
+++ b/Project Cinema/Base.lproj/Main.storyboard
@@ -1340,24 +1340,24 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="6cu-cj-wU0">
-                                            <rect key="frame" x="0.0" y="37" width="600" height="167"/>
+                                            <rect key="frame" x="0.0" y="37" width="600" height="175"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Wlw-rO-93R">
-                                                <size key="itemSize" width="90" height="167"/>
+                                                <size key="itemSize" width="83" height="175"/>
                                                 <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                 <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                                 <inset key="sectionInset" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
                                             </collectionViewFlowLayout>
                                             <cells>
                                                 <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="castMemberCell" id="7de-Tb-xGm" customClass="PCMediaItemCollectionViewCell" customModule="Project_Cinema" customModuleProvider="target">
-                                                    <rect key="frame" x="10" y="0.0" width="90" height="167"/>
+                                                    <rect key="frame" x="10" y="0.0" width="83" height="175"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                                        <rect key="frame" x="0.0" y="0.0" width="90" height="167"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="83" height="175"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                         <subviews>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qgQ-ch-T9z">
-                                                                <rect key="frame" x="0.0" y="0.0" width="90" height="125"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="83" height="125"/>
                                                                 <color key="backgroundColor" red="0.83011744970000001" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="125" id="VyO-Va-qD0"/>
@@ -1369,21 +1369,21 @@
                                                                     <userDefinedRuntimeAttribute type="boolean" keyPath="layer. masksToBounds" value="YES"/>
                                                                 </userDefinedRuntimeAttributes>
                                                             </imageView>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b3G-nr-peP">
-                                                                <rect key="frame" x="0.0" y="146" width="90" height="21"/>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is a two row label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yul-gq-eG5">
+                                                                <rect key="frame" x="0.0" y="128" width="83" height="28"/>
                                                                 <constraints>
-                                                                    <constraint firstAttribute="height" constant="21" id="bzh-4n-wj5"/>
+                                                                    <constraint firstAttribute="height" constant="28" id="YoT-3Y-ieW"/>
                                                                 </constraints>
-                                                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
                                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yul-gq-eG5">
-                                                                <rect key="frame" x="0.0" y="125" width="90" height="21"/>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b3G-nr-peP">
+                                                                <rect key="frame" x="0.0" y="157" width="83" height="16"/>
                                                                 <constraints>
-                                                                    <constraint firstAttribute="height" constant="21" id="YoT-3Y-ieW"/>
+                                                                    <constraint firstAttribute="height" constant="16" id="bzh-4n-wj5"/>
                                                                 </constraints>
-                                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
@@ -1392,6 +1392,7 @@
                                                     </view>
                                                     <constraints>
                                                         <constraint firstAttribute="trailing" secondItem="yul-gq-eG5" secondAttribute="trailing" id="7kW-tr-lib"/>
+                                                        <constraint firstItem="yul-gq-eG5" firstAttribute="top" secondItem="qgQ-ch-T9z" secondAttribute="bottom" constant="3" id="H1M-Me-WQF"/>
                                                         <constraint firstItem="b3G-nr-peP" firstAttribute="leading" secondItem="7de-Tb-xGm" secondAttribute="leading" id="PSm-Yd-SFi"/>
                                                         <constraint firstItem="yul-gq-eG5" firstAttribute="trailing" secondItem="7de-Tb-xGm" secondAttribute="trailingMargin" id="Pae-nw-NM5"/>
                                                         <constraint firstItem="b3G-nr-peP" firstAttribute="top" secondItem="yul-gq-eG5" secondAttribute="bottom" id="Qu9-Sb-xsH"/>
@@ -1404,11 +1405,14 @@
                                                         <constraint firstItem="qgQ-ch-T9z" firstAttribute="leading" secondItem="7de-Tb-xGm" secondAttribute="leading" id="oM2-yI-qQD"/>
                                                         <constraint firstItem="yul-gq-eG5" firstAttribute="leading" secondItem="7de-Tb-xGm" secondAttribute="leadingMargin" id="pdP-P8-ItG"/>
                                                         <constraint firstAttribute="trailing" secondItem="qgQ-ch-T9z" secondAttribute="trailing" id="vr0-dv-dAo"/>
+                                                        <constraint firstItem="b3G-nr-peP" firstAttribute="top" secondItem="yul-gq-eG5" secondAttribute="bottom" constant="1" id="wVL-hu-PFU"/>
                                                     </constraints>
                                                     <variation key="default">
                                                         <mask key="constraints">
                                                             <exclude reference="Pae-nw-NM5"/>
+                                                            <exclude reference="TYr-hp-cZu"/>
                                                             <exclude reference="pdP-P8-ItG"/>
+                                                            <exclude reference="Qu9-Sb-xsH"/>
                                                             <exclude reference="RWx-qp-Uyz"/>
                                                             <exclude reference="bA6-i6-PFh"/>
                                                         </mask>
@@ -1429,7 +1433,7 @@
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="HGT-HI-YTy" firstAttribute="leading" secondItem="iRv-Ae-dAy" secondAttribute="leadingMargin" id="1wU-wZ-IRI"/>
-                                        <constraint firstItem="6cu-cj-wU0" firstAttribute="bottom" secondItem="iRv-Ae-dAy" secondAttribute="bottomMargin" id="D47-Zf-IZJ"/>
+                                        <constraint firstItem="6cu-cj-wU0" firstAttribute="bottom" secondItem="iRv-Ae-dAy" secondAttribute="bottom" id="D47-Zf-IZJ"/>
                                         <constraint firstItem="6cu-cj-wU0" firstAttribute="leading" secondItem="iRv-Ae-dAy" secondAttribute="leadingMargin" constant="-8" id="G2t-1U-7hA"/>
                                         <constraint firstItem="HGT-HI-YTy" firstAttribute="top" secondItem="iRv-Ae-dAy" secondAttribute="topMargin" id="Nz3-HL-LY8"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="6cu-cj-wU0" secondAttribute="trailing" constant="-8" id="PiO-gA-mgg"/>
@@ -1457,9 +1461,6 @@
                     </navigationItem>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="600" height="1200"/>
-                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="d0T-fC-PpO">
-                        <autoresizingMask key="autoresizingMask"/>
-                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nmk-gf-iWf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
