--- a/Project Cinema/Base.lproj/Main.storyboard
+++ b/Project Cinema/Base.lproj/Main.storyboard
@@ -73,11 +73,11 @@
             </objects>
             <point key="canvasLocation" x="626" y="734"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Account-->
         <scene sceneID="rMB-6n-Lhg">
             <objects>
                 <navigationController id="X0m-Qs-lHw" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" systemItem="more" id="fhQ-86-8Jm"/>
+                    <tabBarItem key="tabBarItem" title="Account" image="AccountOutlineBarIcon" selectedImage="AccountFullBarIcon" id="fhQ-86-8Jm"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="gV4-i5-Z2Z">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -761,20 +761,20 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="qXN-US-H3R">
-                                            <rect key="frame" x="0.0" y="37" width="600" height="167"/>
+                                            <rect key="frame" x="0.0" y="37" width="600" height="175"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Lam-rH-V2h">
-                                                <size key="itemSize" width="90" height="167"/>
+                                                <size key="itemSize" width="90" height="175"/>
                                                 <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                 <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                                 <inset key="sectionInset" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
                                             </collectionViewFlowLayout>
                                             <cells>
                                                 <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="castMemberCell" id="DaM-57-twL" customClass="PCMediaItemCollectionViewCell" customModule="Project_Cinema" customModuleProvider="target">
-                                                    <rect key="frame" x="10" y="0.0" width="90" height="167"/>
+                                                    <rect key="frame" x="10" y="0.0" width="90" height="175"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                                        <rect key="frame" x="0.0" y="0.0" width="90" height="167"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="90" height="175"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                         <subviews>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vcw-dQ-QWM">
@@ -790,8 +790,8 @@
                                                                     <userDefinedRuntimeAttribute type="boolean" keyPath="layer. masksToBounds" value="YES"/>
                                                                 </userDefinedRuntimeAttributes>
                                                             </imageView>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GDB-1o-48d">
-                                                                <rect key="frame" x="8" y="146" width="74" height="21"/>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Long Role name that requires two rows" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GDB-1o-48d">
+                                                                <rect key="frame" x="8" y="153" width="74" height="21"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="21" id="yvO-ah-vwT"/>
                                                                 </constraints>
@@ -799,11 +799,10 @@
                                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xbw-Gi-k2E">
-                                                                <rect key="frame" x="8" y="125" width="74" height="21"/>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A Long Actor Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xbw-Gi-k2E">
+                                                                <rect key="frame" x="8" y="125" width="74" height="28"/>
                                                                 <constraints>
-                                                                    <constraint firstAttribute="height" constant="21" id="WwP-ck-IcO"/>
-                                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="cX2-hI-eXM"/>
+                                                                    <constraint firstAttribute="height" constant="28" id="WwP-ck-IcO"/>
                                                                 </constraints>
                                                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
                                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -843,7 +842,7 @@
                                         <constraint firstItem="qXN-US-H3R" firstAttribute="leading" secondItem="m8M-gh-CNV" secondAttribute="leadingMargin" constant="-8" id="DLG-QY-aBd"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="qXN-US-H3R" secondAttribute="trailing" constant="-8" id="Pvo-R0-7oR"/>
                                         <constraint firstItem="jYf-qa-8Y3" firstAttribute="leading" secondItem="m8M-gh-CNV" secondAttribute="leadingMargin" id="W4Z-ed-iIP"/>
-                                        <constraint firstItem="qXN-US-H3R" firstAttribute="bottom" secondItem="m8M-gh-CNV" secondAttribute="bottomMargin" id="r0O-s2-4H9"/>
+                                        <constraint firstItem="qXN-US-H3R" firstAttribute="bottom" secondItem="m8M-gh-CNV" secondAttribute="bottom" id="r0O-s2-4H9"/>
                                         <constraint firstItem="jYf-qa-8Y3" firstAttribute="top" secondItem="m8M-gh-CNV" secondAttribute="topMargin" id="wNm-Nm-8IM"/>
                                     </constraints>
                                 </tableViewCellContentView>
@@ -1468,6 +1467,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="AccountFullBarIcon" width="37" height="37"/>
+        <image name="AccountOutlineBarIcon" width="37" height="37"/>
         <image name="FavoritesFullBarIcon" width="25" height="25"/>
         <image name="FavoritesOutlineBarIcon" width="25" height="25"/>
         <image name="FeedFullBarIcon" width="25" height="25"/>
