Visual Identity Change
Not completed

--- a/Project Cinema/Base.lproj/LaunchScreen.storyboard
+++ b/Project Cinema/Base.lproj/LaunchScreen.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchLogo" translatesAutoresizingMaskIntoConstraints="NO" id="oWV-vB-77b">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="appLogo" translatesAutoresizingMaskIntoConstraints="NO" id="oWV-vB-77b">
                                 <rect key="frame" x="225" y="225" width="150" height="150"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="150" id="8QZ-7N-2JS"/>
@@ -25,7 +25,7 @@
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.12941176469999999" green="0.12941176469999999" blue="0.12941176469999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="oWV-vB-77b" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="54M-ED-dZL"/>
                             <constraint firstItem="oWV-vB-77b" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Tb2-9O-WST"/>
@@ -38,6 +38,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="launchLogo" width="333" height="333"/>
+        <image name="appLogo" width="1000" height="1000"/>
     </resources>
 </document>
